src/objects/Product2.object
<CustomObject>
	<fields>
        <fullName>Unique_id__c</fullName>
        <externalId>true</externalId>
        <label>Unique_id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
	<fields>
        <fullName>Type_of_quote__c</fullName>
        <label>Tipo de cotización</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_quote_stock</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>formalization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>formalization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>price_penalty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>price penalty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>risk_sanction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>product desc</description>
        <label>risk sanction</label>
        <type>Checkbox</type>
    </fields>
	    <fields>
        <fullName>pdf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>pdf</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>